# datenstrom

./: .gitignore  LICENSE.md  README.md  config.json  pants.toml  pyproject.toml
datenstrom/: BUILD
datenstrom/assets/: README.md
datenstrom/collector/: BUILD  Dockerfile  app.py  collect.py  main.py  routes.py
datenstrom/collector/settings/: __init__.py
datenstrom/collector/sinks/: dev.py  kafka.py
datenstrom/collector/tests/: config.json  test_collector.py
datenstrom/common/: cache.py
datenstrom/common/registry/: __init__.py  base.py  iglu.py  manager.py
datenstrom/common/schema/: utils.py
datenstrom/common/settings/: __init__.py
datenstrom/datastore/: arrow.py  duck.py  shredder.py
datenstrom/enrich/: app.py
datenstrom/processing/: BUILD  Dockerfile  enrich.py  enricher.py  main.py  processor.py  raw_processor.py  version.py
datenstrom/settings/: __init__.py  utils.py
datenstrom_collector/: app.py  event.py  main.py
datenstrom_collector/routers/: core.py
datenstrom_collector/settings/: __init__.py
datenstrom_collector/sinks/: base.py  dev.py  kafka.py
dependencies/: BUILD  pyproject.toml  pytest-lock.txt  python-default-lock.txt  test-requirements.txt
dependencies/python/: pytest-lock.txt  python-default-lock.txt
deployment/: docker-compose-kafka.yaml  docker-compose.yaml
deployment/kubernetes/: collector-ingress.yaml  collector-service.yaml  datenstrom-ns.yaml  enricher-service.yaml
examples/: consume_events.py  event_consumer.py  send_event.py
tests/: config.py  test_collector.py  test_data.json  test_serialization.py
(+31 files in other folders)
