[tool.poetry]
name = "datenstrom-collector"
version = "0.1.0"
description = ""
authors = ["Matthias <matthias@allitsch-wutte.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
thriftpy2 = "^0.4.17"
fastavro = "^1.9.1"
orjson = "^3.9.10"
confluent-kafka = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
snowplow-tracker = "^1.0.1"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
