[tool.poetry]
name = "datenstrom"
version = "0.1.0"
description = "Datenstrom Mono Repo"
authors = ["Matthias <matthias@allitsch-wutte.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
pydantic-settings = "^2.1.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}
thriftpy2 = "^0.4.17"
fastavro = "^1.9.1"
orjson = "^3.9.10"
confluent-kafka = "^2.3.0"
jsonschema = "^4.20.0"
geoip2 = "^4.8.0"
boto3 = "^1.34.11"
gunicorn = "^21.2.0"
pydantic = "^2.5.3"
requests = "^2.31.0"
pyjwt = {extras = ["cryptography"], version = "^2.8.0"}
cryptography = "^41.0.7"
duckdb = "^0.9.2"
pyarrow = "^14.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
